fix .minecraft & add better level saving dir